--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,14 @@
       </div>
     {% endif %}
 
-    <div class="page__footer">
-      <footer>
-        {% include footer/custom.html %}
-        {% include footer.html %}
-      </footer>
-    </div>
+    {% unless site.hide_footer %}
+      <div class="page__footer">
+        <footer>
+          {% include footer/custom.html %}
+          {% include footer.html %}
+        </footer>
+      </div>
+    {% endunless %}
 
     {% include scripts.html %}
 
