--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -39,7 +39,11 @@
     {% endif %}
   </div>
 
+
   <div class="author__urls-wrapper">
+    {% if page.sidebar.nav %}
+      {% include nav_list nav=page.sidebar.nav %}
+    {% endif %}
     <button class="btn btn--inverse">{{ site.data.ui-text[site.locale].follow_label | remove: ":" | default: "Follow" }}</button>
     <ul class="author__urls social-icons">
       {% if author.location %}
