--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -81,6 +81,7 @@ $dribbble-color: #ea4c89 !default;
 $facebook-color: #3b5998 !default;
 $flickr-color: #ff0084 !default;
 $foursquare-color: #0072b1 !default;
+$hackernews-color: #ff4000 !default;
 $github-color: #171516 !default;
 $google-plus-color: #dd4b39 !default;
 $instagram-color: #517fa4 !default;
@@ -88,6 +89,8 @@ $lastfm-color: #d51007 !default;
 $linkedin-color: #007bb6 !default;
 $pinterest-color: #cb2027 !default;
 $rss-color: #fa9b39 !default;
+// $reddit-color: #5f99cf !default;
+$reddit-color: #ff4500 !default;
 $soundcloud-color: #ff3300 !default;
 $stackoverflow-color: #fe7a15 !default;
 $tumblr-color: #32506d !default;
